# selfie_obstacle_detection

./: CMakeLists.txt  LICENSE  package.xml
include/selfie_obstacle_detection/: CornerDetector.h  ICoordinatesTransformer.h  ICornerGenerator.h  ILineHelper.h  IMeasurementValidator.h  IObstacleObservationsExtractor.h  ObstacleObservations.h  ObstacleObservationsExtractor.h  RemoveBackground.h
msg/: CornerArray.msg
src/: CornerDetector.cpp  ObstacleObservationsExtractor.cpp  RemoveBackground.cpp  RemoveBackgroundMaster.cpp
src/nodelets/: remove_background.cpp
test/: CornerDetectorTests.cpp  ObstacleObservationsExtractorTests.cpp
